fixed alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -122,10 +122,6 @@ li a {
     50% { opacity: 1; }
 }
 
-img {
-	width:20px;
-}
-
 .jump ion-icon {
 	margin-left: auto;
 	margin-right: auto;
@@ -153,7 +149,7 @@ h2{
 
 .portfolio {
 	display: grid;
-	grid-template-columns: repeat(auto-fill, minmax(350px,1fr));
+	grid-template-columns: repeat(auto-fill, minmax(300px,1fr));
 	grid-auto-rows: auto;
 	margin:0px auto;
 }
@@ -205,7 +201,7 @@ button:hover{
   	justify-content: flex-start;
   	align-items:center;
   	align-content:stretch;
-  	min-width: 350px;
+  	min-width: 300px;
   	width:30%;
 }
 
